name:                WYAH
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/WYAH#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SimpleLang.NanoParsec,
                       SimpleLang.SimpleGrammar,
                       SimpleLang.Parser,
                       SimpleLang.Syntax,
                       LambdaCalc.Syntax,
                       LambdaCalc.Pretty,
                       LambdaCalc.Parser,
                       LambdaCalc.Eval

  build-depends:       base >= 4.7 && < 5,
                       parsec >=3.1,
                       pretty >= 1.1,
                       containers


  default-language:    Haskell2010


executable lambdaRepl
  hs-source-dirs:      app
  main-is:             LambdaRepl.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , WYAH
                     , haskeline >= 0.7
                     , transformers >= 0.4
  default-language:    Haskell2010


test-suite doctests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base < 5 && >= 3
                     , doctest
                     , WYAH
                     , parsec
                     , directory
                     , filepath



  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alphamarc/WYAH
